--- a/summary.html
+++ b/summary.html
@@ -5,7 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Order Summary</title>
   <script type="module">
-    import('./i18n.js').then(({ applyTranslations }) => applyTranslations());
+    let applyTranslations = () => {};
+    try {
+      const mod = await import('./i18n.js');
+      applyTranslations = mod.applyTranslations || applyTranslations;
+    } catch (err) {
+      try {
+        const repoBase = window.location.pathname.split('/')[1] || '';
+        if (repoBase) {
+          const altUrl = `${window.location.origin}/${repoBase}/i18n.js`;
+          const mod = await import(altUrl);
+          applyTranslations = mod.applyTranslations || applyTranslations;
+        }
+      } catch (fallbackErr) {
+        console.warn('i18n failed to load; continuing without translations', fallbackErr);
+      }
+    }
+    applyTranslations();
   </script>
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
   <style>
